# ARIA-multiagent-research

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
v1/: aria_testing.md  aria_v1.py
v2/: aria_v2.py  aria_v2_testing.md
v3/: Blackbox_vs_crew.md  Tavily_Research_blackbox.py  aria_v3_multiagent.py  eval_report.md
