[project]
name = "aria-multiagent-research"
version = "1.0.0"
description = "ARIA — an autonomous research agent, evolved from a bare tool-calling loop (v1) to a fact-checked multi-agent crew (v3)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.2.4",
    "openai>=2.41.0",
    "tavily-python>=0.7.25",
    "pydantic>=2.13.4",
    "tenacity>=9.0.0",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "colorama>=0.4.6",
]
